[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/gameplay/pause.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/vcr.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 22
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
layer = 10
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.745098 )

[node name="Options" type="Node2D" parent="."]

[node name="SongLabel" type="Label" parent="."]
margin_left = 9.0
margin_top = 8.0
margin_right = 1272.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "SONG-NAME"
align = 2

[node name="ModeLabel" type="Label" parent="."]
margin_left = 9.0
margin_top = 27.0
margin_right = 1272.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
text = "MODE"
align = 2

[node name="DeathsLabel" type="Label" parent="."]
margin_left = 9.0
margin_top = 46.0
margin_right = 1272.0
margin_bottom = 66.0
rect_scale = Vector2( 1.00046, 1 )
custom_fonts/font = SubResource( 1 )
text = "BLUE-BALLED: 0"
align = 2

[node name="Tween" type="Tween" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
